--- a/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2025-03-11 16:35+0100\n"
+"POT-Creation-Date: 2025-03-27 09:03+0100\n"
 "PO-Revision-Date: 2022-03-15 10:52+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -2023,11 +2023,11 @@ msgid "Invalid YAML format. Please refer to the example."
 msgstr "Formato YAML non valido. Fare riferimento all'esempio."
 
 msgid ""
-"Invalid format. Please define an organisation name with topics and subtopics "
-"according the example."
+"Invalid format. Please define a listwith topics and subtopics according the "
+"example."
 msgstr ""
-"Formato non valido. Definire un nome di organizzazione con argomenti e "
-"sottoargomenti secondo l'esempio."
+"Formato non valido. Definire una lista con argomenti e sottoargomenti "
+"secondo l'esempio."
 
 msgid ""
 "Invalid format. Please define topics and subtopics according to the example."
@@ -3134,8 +3134,8 @@ msgstr "Il rifiuto di ${title} non può essere annullato."
 msgid "Reject reservation"
 msgstr "Rifiuta prenotazione"
 
-#.
 #. Used in sentence: "${event} published."
+#.
 msgid "Event"
 msgstr "Evento"
 
@@ -4952,6 +4952,21 @@ msgstr "Icona identificativa"
 msgid "Not a valid color."
 msgstr "Colore non valido."
 
+msgid "CSRF failed."
+msgstr ""
+"CSRF non riuscito. Si prega di aggiornare la pagina. Se il problema "
+"persiste, disconnettersi, riconnettersi e riprovare."
+
+msgid "CSRF token missing."
+msgstr ""
+"Token CSRF mancante. Si prega di aggiornare la pagina. Se il problema "
+"persiste, disconnettersi, riconnettersi e riprovare."
+
+msgid "CSRF token expired."
+msgstr ""
+"Token CSRF scaduto. Si prega di aggiornare la pagina. Se il problema "
+"persiste, disconnettersi, riconnettersi e riprovare."
+
 msgid "Not a valid choice"
 msgstr "Scelta non valida"
 
@@ -6520,3 +6535,10 @@ msgstr "È stato creato un account per te"
 
 msgid "The user was created successfully"
 msgstr "Utente creato correttamente"
+
+#~ msgid ""
+#~ "Invalid format. Please define an organisation name with topics and "
+#~ "subtopics according the example."
+#~ msgstr ""
+#~ "Formato non valido. Definire un nome di organizzazione con argomenti e "
+#~ "sottoargomenti secondo l'esempio."
