--- a/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2025-03-20 14:09+0100\n"
+"POT-Creation-Date: 2025-03-27 09:48+0100\n"
 "PO-Revision-Date: 2022-03-15 10:52+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -3143,8 +3143,8 @@ msgstr "Il rifiuto di ${title} non può essere annullato."
 msgid "Reject reservation"
 msgstr "Rifiuta prenotazione"
 
-#.
 #. Used in sentence: "${event} published."
+#.
 msgid "Event"
 msgstr "Evento"
 
@@ -3419,6 +3419,12 @@ msgstr "Richiesta di modifica"
 msgid "Found an error? Propose a change to this entry."
 msgstr "Trovato un errore? Proponi una modifica a questo elemento."
 
+msgid "No subscribers yet"
+msgstr "Non ci sono ancora abbonati"
+
+msgid "There are currently ${count} recipients registered."
+msgstr "Al momento ci sono ${count} destinatari registrati."
+
 msgid ""
 "Subscribers may always unsubscribe themselves through a link shown at the "
 "bottom of the newsletter. If you unsubscribe them here, they will not be "
@@ -3433,6 +3439,15 @@ msgstr "Annulla iscrizione"
 
 msgid "unsubscribe"
 msgstr "annulla l'iscrizione"
+
+msgid ""
+"This recipient has delivery failures, including hard bounces, invalid email "
+"addresses, spam complaints, manual deactivations, or being blocked. We "
+"recommend unsubscribing it from the list."
+msgstr ""
+"Questo destinatario presenta errori di consegna, tra cui rimbalzi, indirizzi "
+"e-mail non validi, reclami per spam, disattivazioni manuali o blocco. Si "
+"consiglia di cancellarlo dall'elenco."
 
 msgid ""
 "Your edit requires a migration of existing entries. Please confirm the "
@@ -4485,9 +4500,6 @@ msgstr ""
 "La newsletter è disabilitata. Puoi vedere questa pagina solo perché hai "
 "fatto il login."
 
-msgid "There are currently ${count} recipients registered."
-msgstr "Al momento ci sono ${count} destinatari registrati."
-
 msgid "To update your subscription, please use this ${Link}"
 msgstr "Per aggiornare la tua iscrizione, utilizza questo ${Link}"
 
@@ -4646,18 +4658,6 @@ msgstr "Response Data"
 
 msgid "No notifications"
 msgstr "Nessuna notifica"
-
-msgid "No subscribers yet"
-msgstr "Non ci sono ancora abbonati"
-
-msgid ""
-"This recipient has delivery failures, including hard bounces, invalid email "
-"addresses, spam complaints, manual deactivations, or being blocked. We "
-"recommend unsubscribing it from the list."
-msgstr ""
-"Questo destinatario presenta errori di consegna, tra cui rimbalzi, indirizzi "
-"e-mail non validi, reclami per spam, disattivazioni manuali o blocco. Si "
-"consiglia di cancellarlo dall'elenco."
 
 msgid "submitted"
 msgstr "inviato"
@@ -4960,6 +4960,21 @@ msgstr "Icona identificativa"
 
 msgid "Not a valid color."
 msgstr "Colore non valido."
+
+msgid "CSRF failed."
+msgstr ""
+"CSRF non riuscito. Si prega di aggiornare la pagina. Se il problema "
+"persiste, disconnettersi, riconnettersi e riprovare."
+
+msgid "CSRF token missing."
+msgstr ""
+"Token CSRF mancante. Si prega di aggiornare la pagina. Se il problema "
+"persiste, disconnettersi, riconnettersi e riprovare."
+
+msgid "CSRF token expired."
+msgstr ""
+"Token CSRF scaduto. Si prega di aggiornare la pagina. Se il problema "
+"persiste, disconnettersi, riconnettersi e riprovare."
 
 msgid "Not a valid choice"
 msgstr "Scelta non valida"
@@ -6529,3 +6544,17 @@ msgstr "È stato creato un account per te"
 
 msgid "The user was created successfully"
 msgstr "Utente creato correttamente"
+
+#~ msgid ""
+#~ "Invalid format. Please define a listwith topics and subtopics according "
+#~ "the example."
+#~ msgstr ""
+#~ "Formato non valido. Definire una lista con argomenti e sottoargomenti "
+#~ "secondo l'esempio."
+
+#~ msgid ""
+#~ "Invalid format. Please define an organisation name with topics and "
+#~ "subtopics according the example."
+#~ msgstr ""
+#~ "Formato non valido. Definire un nome di organizzazione con argomenti e "
+#~ "sottoargomenti secondo l'esempio."
